# tabkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md
.github/workflows/: ci.yml
examples/: custom_reader.rs  inspect.rs
src/: calamine.rs  csv.rs  error.rs  lib.rs  parquet.rs
